# FastFoodSim

./: .buildinfo  .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  config.html  deployment.html  docker-compose.yaml  genindex.html  index.html  introduction.html  modules.html  objects.inv  optimization.html  py-modindex.html  pyproject.toml  requirements.txt  rl.html  search.html  searchindex.js  src.html  src.optimization.html  src.rl.html  src.sim.html  test.py
.github/workflows/: docs.yaml
_modules/: index.html
_sources/: deployment.rst.txt  introduction.rst.txt  optimization.rst.txt  src.rl.rst.txt
docs/: requirements.txt
docs/source/: conf.py  config.rst  index.rst  introduction.rst  optimization.rst  rl.rst  src.optimization.rst  src.rst  src.sim.rst
src/: FastFoodEnv.py  config.py  main.py  optimize.py  plot_missed_opportunties.py  plot_revenue_bars.py  plot_rl_curve.py  plot_stats.py  plot_waste.py  processes.py  restaurant.py  train_ai.py  visualize_pygame.py  visualize_topdown.py
src/optimization/: optimize.py
src/rl/: FastFoodEnv.py  eval_a2c.py  eval_dqn.py  eval_ppo.py  evaluate.py  generate_report.py  train.py  train_a2c.py  train_all.py  train_dqn.py  train_ppo.py
src/sim/: __init__.py  processes.py  restaurant.py
src/visualization/: generate_report.py  plot_rl_curve.py  plot_waste.py  visualize_topdown.py
stats/: 0.monitor.csv  1.monitor.csv  2.monitor.csv  3.monitor.csv  financials.csv  rl_training_logs.monitor.csv
tests/: test_env.py  test_optimize.py  test_processes.py  test_restaurant.py
(+6 files in other folders)
