[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fastfoodsim"
version = "1.0.0"
description = "An AI Kitchen Manager simulation using SimPy and Gymnasium"
authors = [
    {name = "Maxime Szymanski"}
]
dependencies = [
    "gymnasium==0.28.1",
    "sb3-contrib==2.1.0",
    "simpy==4.0.1",
    "pygame==2.5.1",
    "imageio==2.31.3",
    "optuna==3.3.0",
    "pandas==2.1.0",
    "matplotlib==3.8.0",
    "tensorboard==2.13.0",
    "tqdm==4.66.0",
    "stable-baselines3==2.1.0",
    "rich"
]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
